changed index waves

--- a/index.html
+++ b/index.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 	<title> Kirsty Shanks: Portfolio </title>
+
 </head>
 <body>
-	<nav>	<a href="index.html">HOME</a>
-	<a href="portfolio.html">PORTFOLIO</a>
-
-		<a href="https://www.instagram.com/kirstyshanks789/?hl=en">INSTAGRAM</a>
-</nav>
-	
-
-	<img src="images/athabasca.jpg" width="300px">
-	<img src="images/athabasca.jpg" width="300px">
-	<img src="images/athabasca.jpg" width="300px">
-
 	<h1>Portfolio: Kirsty Shanks</h1>
 	<h2>LIFE</h2>
 	<h3>with me</h3>
@@ -24,7 +15,7 @@
 	<ul>
 	<li>Irish</li>
 	<li>Blonde</li>
-	<li>SEASEASEA</li>
+	<li>SEASEASEA and big waves</li>
 
 	</ul>
 	<h3>LOVES</h3>
@@ -33,7 +24,6 @@
 		<li>Shoes</li>
 		<li>Waves</li>
 	</ol>
-
 
 
 </body>
