--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h2>LIFE</h2>
 	<h3>with me</h3>
 
-	<p>Living life - get me to the beach
+	<p>Living life - get me to the beach asap
 	</p>
 	<ul>
 	<li>Irish</li>
