--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<li>SEASEASEA and big waves</li>
 
 	</ul>
-	<h3>LOVES</h3>
+	<h3>PASSIONS</h3>
 	<ol>
 		<li>CoffeeCoffee</li>
 		<li>Shoes</li>
