--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
 
 </head>
 <body>
-	<h1>Portfolio: Kirsty Shanks</h1>
+
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+
+		 <a href="index.html">HOME</a>
+	<a href="portfolio.html">PORTFOLIO</a>
+
+	<div><img src="images/athabasca.jpg" width="300px">
+		<img src="images/athabasca.jpg" width="300px">
+		<img src="images/athabasca.jpg" width="300px">
+	</div>
+	
+
+
+	<h1 class="border">Portfolio: Kirsty Shanks</h1>
 	<h2>LIFE</h2>
 	<h3>with me</h3>
 
