--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,10 @@
 <head>
 	<title>MY PORTFOLIO</title>
 
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+
+	<link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
+
 </head>
 <body>
 
@@ -10,17 +14,24 @@
 	<a href="portfolio.html">PORTFOLIO</a>
 
 	<h1>PORTFOLIO SUMMARY: </h1>
-<h3>RUGBY</h3>
 
-	<img src="images/rugby.jpg" width="400px">
+	<h3>RUGBY</h3>
+
+	<img src="images/rugby.jpg" width="400px" class="border">
+
+	<nav>
 
 	<h3>Lola pupper</h3>
 
-	<img src="images/lola.jpg" width="400px">
+	<img src="images/lola.jpg" width="400px" class="border">
+
+	</nav>
+		
+
 
 	<h3>Portbraddon, Northern Ireland</h3>
 
-	<img src="images/portb.jpg" width="400px">
+	<img src="images/portb.jpg" width="400px" class="border">
 
 </body>
 </html>
