--- a/index.html
+++ b/index.html
@@ -4,23 +4,29 @@
 
 	<title> Kirsty Shanks: Portfolio </title>
 
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+
+	<link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
+
+	<a href="index.html">HOME</a>
+	<a href="portfolio.html">PORTFOLIO</a>
+	<a href="https://www.instagram.com/kirstyshanks789/">INSTAGRAM</a>
+
 </head>
 <body>
 
-	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<nav>
 
-		 <a href="index.html">HOME</a>
-	<a href="portfolio.html">PORTFOLIO</a>
+		<img src="images/athabasca.jpg" width="300px" class="border">
+		<img src="images/athabasca.jpg" width="300px" class="border">
+		<img src="images/athabasca.jpg" width="300px" class="border">
 
-	<div><img src="images/athabasca.jpg" width="300px">
-		<img src="images/athabasca.jpg" width="300px">
-		<img src="images/athabasca.jpg" width="300px">
-	</div>
+	</nav>
 	
 
 
 	<h1 class="border">Portfolio: Kirsty Shanks</h1>
-	<h2>LIFE</h2>
+	<h2 class="fontcolourwhite">LIFE</h2>
 	<h3>with me</h3>
 
 	<p>Living life - get me to the beach asap
