updated black and white

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
+
+<head class="fontcolourwhite">
 
 	<title> Kirsty Shanks: Portfolio </title>
 
@@ -26,7 +27,9 @@
 
 
 	<h1 class="border">Portfolio: Kirsty Shanks</h1>
-	<h2 class="fontcolourwhite">LIFE</h2>
+
+	<h2 >LIFE</h2>
+	
 	<h3>with me</h3>
 
 	<p>Living life - get me to the beach asap
@@ -37,6 +40,7 @@
 	<li>SEASEASEA and big waves</li>
 
 	</ul>
+
 	<h3>PASSIONS</h3>
 	<ol>
 		<li>CoffeeCoffee</li>
