--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head class="fontcolourwhite">
+<head>
 
 	<title> Kirsty Shanks: Portfolio </title>
 
@@ -29,10 +29,10 @@
 	<h1 class="border">Portfolio: Kirsty Shanks</h1>
 
 	<h2 >LIFE</h2>
-	
+
 	<h3>with me</h3>
 
-	<p>Living life - get me to the beach asap
+	<p>Living life - get me to the beach
 	</p>
 	<ul>
 	<li>Irish</li>
