--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 	<nav>
 
-		<img src="images/athabasca.jpg" width="300px" class="border">
-		<img src="images/athabasca.jpg" width="300px" class="border">
-		<img src="images/athabasca.jpg" width="300px" class="border">
+		<img src="images/athabasca.jpg" width="300px" class="imagecentral border">
+		<img src="images/athabasca.jpg" width="300px" class=" imagecentral border">
+		<img src="images/athabasca.jpg" width="300px" class="imagecentral border">
 
 	</nav>
 	
